--- a/index.html
+++ b/index.html
@@ -17,26 +17,50 @@
         <table>
             <tr>
                 <th>Modelo</th>
+                <th>Marca</th>
                 <th>Precio</th>
             </tr>
             <tr>
-                <td>Convencional</td>
-                <td>$4,500 MXN</td>
+                <td>Eficiente</td>
+                <td>AURUS</td>
+                <td>$5,500 MXN</td>
             </tr>
             <tr>
                 <td>Inverter</td>
+                <td>AURUS</td>
                 <td>$7,500 MXN </td>
+            </tr>
+                <td>Inverter Pro</td>
+                <td>AURUS</td>
+                <td>$13,000 MXN </td>
+            </tr>            
+            <tr>
+                <td>Convencional</td>
+                <td>AUX</td>
+                <td>$6,500 MXN</td>
+            </tr>
+            <tr>
+            <tr>
+                <td>Inverter</td>
+                <td>AUX</td>
+                <td>$9,000 MXN </td>
             </tr>
             <tr>
                 <td>Alpha</td>
-                <td>$12,000 MXN </td>
+                <td>AUX</td>
+                <td>$14,500 MXN </td>
             </tr>
         </table>
+        <div class="leyenda">
+            <p>Precios no incluyen IVA</p>
+        </div>
     </div>
+    <button>Cotiza Aqui</button>
     <div class="subtexto">
         <p>*Para pedidos de 1 a 5 equipos: Costo de instalación $1,100 por equipo</p>
         <p>**Para pedidos mayores a 6 equipos: Costo de instalación $550 por equipo</p>
     </div>
-    <script src="main.js"></script> 
+    <script src="inventario.js"></script>
+    <script src="main2.js"></script> 
 </body>
 </html>
