--- a/index.html
+++ b/index.html
@@ -177,6 +177,6 @@
 
         </div>
     </div>
-    <script src="nuevomain.js"></script> 
+    <script src="/js/nuevomain.js"></script> 
 </body>
 </html>
