--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 </div>
                 <div class="saludonav">
                     <ul>
-                        <li> <a href="">Tienda</a> </li>
-                        <li> <a href="">Mi cuenta</a> </li>
+                        <li> <a href="index.html">Tienda</a> </li>
+                        <li> <a href="/pages/login.html">Mi cuenta</a> </li>
 
                 </div>
                 <div class="carrito">
