--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="saludonav">
                     <ul>
                         <li> <a href="index.html">Tienda</a> </li>
-                        <li> <a href="/pages/login.html">Mi cuenta</a> </li>
+                        <li> <a href="pages/login.html">Mi cuenta</a> </li>
 
                 </div>
                 <div class="carrito">
