--- a/pages/login.html
+++ b/pages/login.html
@@ -16,12 +16,12 @@
         <div class="fila">
             <div class="columnascentro">
                 <div class="icononav">
-                    <img src="/img/Climaris Logo Blanco.png" alt="">
+                    <img src="img/Climaris Logo Blanco.png" alt="">
                 </div>
                 <div class="saludonav">
                     <ul>
-                        <li> <a href="/index.html">Tienda</a> </li>
-                        <li> <a href="/pages/login.html">Mi cuenta</a> </li>
+                        <li> <a href="index.html">Tienda</a> </li>
+                        <li> <a href="/ages/login.html">Mi cuenta</a> </li>
 
                 </div>
                 <div class="carrito">
