--- a/pages/login.html
+++ b/pages/login.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,700;0,800;1,200;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/cafaecdf6c.js" crossorigin="anonymous"></script>
     <title>Climaris - Inicio de sesion</title>
 </head>
@@ -16,12 +16,12 @@
         <div class="fila">
             <div class="columnascentro">
                 <div class="icononav">
-                    <img src="img/Climaris Logo Blanco.png" alt="">
+                    <img src="../img/Climaris Logo Blanco.png" alt="">
                 </div>
                 <div class="saludonav">
                     <ul>
-                        <li> <a href="index.html">Tienda</a> </li>
-                        <li> <a href="pages/login.html">Mi cuenta</a> </li>
+                        <li> <a href="../index.html">Tienda</a> </li>
+                        <li> <a href="../pages/login.html">Mi cuenta</a> </li>
 
                 </div>
                 <div class="carrito">
@@ -74,7 +74,7 @@
                     <div class="form-card" id="usuario-card">
                         <div class="form-signin w-70 m-auto text-center">
                             <form>
-                                <img class="img-form" src="img/icono-minisplit.png" alt="" width="auto" height="200">
+                                <img class="img-form" src="../img/icono-minisplit.png" alt="" width="auto" height="200">
                                 <h1 class="h3 mb-2 fw-normal">¡Bienvenido!</h1>
                             
                                 <div class="celda-form">
@@ -104,7 +104,7 @@
     <footer>
         <div class="footSup">
             <div class="imgfoot">
-                <img src="img/Climaris Logo Blanco.svg" alt="">
+                <img src="../img/Climaris Logo Blanco.svg" alt="">
             </div>
             <div class="contacto">
                 <p class="titulo">Contacto</p>
