--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
             <p>© 2023 Developed by Auro Garcia. Todos los derechos reservados.</p>
     </footer>
 
+    <script src="js/inventario.js"></script> 
     <script src="js/nuevomain.js"></script> 
 </body>
 </html>
