--- a/pages/login.html
+++ b/pages/login.html
@@ -55,17 +55,6 @@
 </header>
 
 <body>
-<!--     <div class="banner-principal">
-        <img src="img/Banner.jpg" alt="">
-    </div>
-
-    <div class="leyenda">
-        <p><b><i>¡ENVÍO GRATIS EN COMPRAS MAYORES A $12,000 PESOS!</i></b></p>
-    </div>
-    <div class="opening-text">
-        <h1>¡Super promociónes en equipos!</h1>
-        <p class="texto"><i>Los Precios no incluyen envío ni instalación.</i></p>
-    </div> -->
 
             <section id="seccion-usuario">
             <div class="col-usuario" id="cont-padre">
@@ -89,7 +78,7 @@
                                 </div>
                                 <div class="celda-form">
                                     <label>
-                                    <input type="checkbox" value="remember-me"> Remember me
+                                    <input type="checkbox" value="remember-me"> Recuerda mi Cuenta
                                     </label>
                                 </div>
                                 <button class="button" type="submit">Entrar</button>
@@ -120,6 +109,7 @@
             <p>© 2023 Developed by Auro Garcia. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="js/main.js"></script> 
+    <script src="js/inventario.js"></script> 
+    <script src="js/nuevomain.js"></script> 
 </body>
 </html>
